# laserfish

./: .env.example  .gitignore  CHANGELOG.md  OPPORTUNITIES.md  README.md  pyproject.toml
scripts/: backtest.py  backtest_5m.py  backtest_grid.py  backtest_v2.py  fetch.py  funding_arb.py  honest_eval.py  momentum_backtest.py  momentum_trade.py  monte_carlo.py  paper_sim.py  paper_trader.py  run.py  trade.py  train.py  training_loop.py  tune.py  tune_grid.py
src/agents/: env.py
src/live/: executor.py
src/regime/: detector.py
src/risk/: manager.py
trader/: agent.py  backtest.py  bars.py  data.py  execution.py  features.py  features_lob.py  labeling.py  leverage.py  model.py  paper_portfolio.py  regime.py  risk.py  train.py
trader/exchanges/: __init__.py  base.py  hyperliquid.py
trader/strategies/: funding_arb.py  grid.py  mean_reversion.py  momentum.py
training/: evaluate.py  train.py
